# ppcrv-poc

./: .gitignore  CHANGES.md  COSTS.md  MAYOR  PPCRV Revamp Draft.xlsx  PRESIDENT  README.md  cost-re-arch.md  package.json  pnpm-lock.yaml  pyproject.toml  readme-re-arch.md  turbo.json
.github/: REVIEW_HISTORY.md
.github/workflows/: opencode-review.yml
apps/api/: .env.example  package.json  tsconfig.json
apps/api/scripts/: seed-redis.ts
apps/api/src/: app.module.ts  main.ts
apps/etl/: .env.example  pyproject.toml
apps/etl/scripts/: generate-contest-names.mjs  load_ref_data.py  run_aggregation.py
apps/web/: package.json  tailwind.config.ts
certs/: localhost-key.pem  localhost.pem
data/: contest-names.json
docs/: CHANGES.md  CLOUDFORMATION.md  COSTS-DEV.md  COSTS.md  DEV-SETUP.md  ERD.md  TERRAFORM.md  cost-arch-v1.md  cost-re-arch-v3.md  pull-request-summary.md  readme-re-arch-v2.md  readme-re-arch-v3.md
docs/superpowers/plans/: 2026-07-09-etl-local-testing.md  2026-07-09-multi-level-aggregation.md  2026-07-13-all-category-tab.md  2026-07-13-contest-segregation.md  2026-07-13-pr-review-ci.md  2026-07-15-category-based-qr-scan-flow.md  (+3 more)
docs/v1/: ERD.md  TERRAFORM.md  readme-arch-v1.md
docs/v2/: cost-re-arch-v2.md
docs/v3/: readme-re-arch-v3.md
etl/: USE.md
output/contest_code=1199000/: data.parquet
sample-csv/: candidates.csv  contest.csv  parties.csv
scripts/: generate-contest-names.mjs  load_ref_data.py  run_aggregation.py
src/etl/: aggregator.py  models.py  processor.py
tests/etl/: test_aggregator.py  test_processor.py
(+64 files in other folders)
