[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "pprcv-etl"
version = "0.1.0"
description = "PPCRV ETL pipeline — DuckDB aggregation"

[project.optional-dependencies]
dev = [
    "duckdb>=1.0",
    "pytest>=8.0",
    "pyarrow>=15.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
